--- a/mdblog/templates/welcome_page.jinja
+++ b/mdblog/templates/welcome_page.jinja
@@ -1,35 +1,7 @@
-<!doctype html>
-<html lang="en">
+{% extends "_main.jinja" %}
 
-<head>
-    <title> Chvostnatý Gábor a jeho chabý pokus o blog </title>
-    <link rel="stylesheet" type="text/css" href={{url_for("static", filename="css/main.css")}}>
-</head>
+{% block title %} Welcome to Markdown blog {% endblock %}
 
-<body>
-<header>
-    <h1> Gabriel Vlček </h1>
-</header>
-
-<nav>
-    <ul class=nav>
-      <li> <a href="#">About</a> </li>
-      <li> <a href="#">Articles</a> </li>
-      <li> <a href="#">Admin</a> </li>
-    </ul>
-</nav>
-
-<main>
-<!--	<blockquote> -->
-	Keby si niečo v živote potreboval...hocičo...tak si to kúp.
-<!--	</blockquote> -->
-	<br>{{ text }}
-</main>
-
-<footer>
-    <p>
-        (c) 2019 Netopíří Doupě, Majerníkova 9
-    </p>
-</footer>
-</body>
-</html>
+{% block main %}
+Netopiere z Majernikovej 9
+{% endblock %}
