--- a/mdblog/templates/_main.jinja
+++ b/mdblog/templates/_main.jinja
@@ -3,30 +3,22 @@
 
 <head>
     <title> {% block title %} {% endblock %} </title>
-    <link rel="stylesheet" type="text/css" href={{url_for("static", filename="css/main.css")}}>
+		{% include "_head.jinja" %}
 </head>
 
 <body>
+
 <header>
-    <h1> <a href="{{ url_for("view_welcome_page") }}"> Gabriel Vlček </a></h1>
+	<h1> <a href="{{ url_for("view_welcome_page") }}"> Gabriel Vlček </a></h1>
 </header>
 
-<nav>
-    <ul class=nav>
-		<li> <a href="{{ url_for("view_about") }}">About</a> </li>
-		<li> <a href="{{ url_for("view_articles") }}">Articles</a> </li>
-		<li> <a href="{{ url_for("view_admin") }}">Admin</a> </li>
-    </ul>
-</nav>
+{% include "_nav.jinja" %}
 
 <main>
 	{% block main %} {% endblock %}
 </main>
 
-<footer>
-    <p>
-        (c) 2019 Netopíří Doupě, Majerníkova devět
-    </p>
-</footer>
+{% include "_footer.jinja" %}
+
 </body>
 </html>
