--- a/mdblog/templates/articles.jinja
+++ b/mdblog/templates/articles.jinja
@@ -3,5 +3,16 @@
 {% block title %} Najkvalitnejsi salsky spravodaj moe {% endblock %}
 
 {% block main %}
-	komenty, blogy a influensy
+	{% if articles %}
+		<ul>
+		{% for id, article in articles %}
+			<li>
+				<h2><a href="{{ url_for("view_article", art_id=id) }}"> {{ article.title }} </h2>
+				<p> {{ article.content | truncate(100) }} </p>
+			</li>
+		{% endfor %}
+		</ul>
+	{% else %}
+		<p> No articles available </p>
+	{% endif %}
 {% endblock %}
